--- a/style/style.css
+++ b/style/style.css
@@ -24,6 +24,10 @@ body{
     color: #0D1321;
     font-size: 20px;
     font-weight: 600;
+    transition: .6s;
+}
+.btn button:hover{
+    background: linear-gradient(90deg, #7fdcfe, #e3e6fa);
 }
 
 .header{
